[project]
name = "team_three"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bing-image-downloader>=1.1.2",
    "fastapi>=0.133.0",
    "grad-cam>=1.5.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "setuptools==80.10.2",
    "sqlalchemy>=2.0.47",
    "streamlit>=1.54.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "uuid>=1.30",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
